first version work

--- a/index.html
+++ b/index.html
@@ -3,9 +3,99 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>hooti</title>
+    <style>
+        div.super-parent{
+            width: 100%;
+            background :#ff0000;
+        }
+        div.parent{
+            display: inline;
+            height: 60px;
+            overflow-x: hidden;
+            overflow-y: hidden;
+            white-space: nowrap;
+            position: relative;
+            left: 0 ;
+            animation: hooti 5s alternate infinite;
+        }
+        div svg{
+            width: 60px;
+            height : 50px;
+            vertical-align: middle;
+            fill : #fff;
+        }
+        div p{
+            display: inline;
+            width: 30%;
+            color : #fff;
+            text-align: center; 
+        }
+        @keyframes hooti {
+            from{
+                left: 0 ;
+            }
+            to { 
+                left: -100%;
+            }
+        }
+    </style>
 </head>
 <body>
-    
+    <div class="super-parent">
+        <div class="parent">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit
+            </p>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 492.8 492.8">
+                <path d="M0 246.4c184.8 34.02 212.38 61.6 246.4 246.4C280.42 308 308 280.42 492.8 246.4 308 212.38 280.42 184.8 246.4 0 212.38 184.8 184.8 212.38 0 246.4Z"/>
+              </svg>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit
+            </p>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 492.8 492.8">
+                <path d="M0 246.4c184.8 34.02 212.38 61.6 246.4 246.4C280.42 308 308 280.42 492.8 246.4 308 212.38 280.42 184.8 246.4 0 212.38 184.8 184.8 212.38 0 246.4Z"/>
+              </svg>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit
+            </p>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 492.8 492.8">
+                <path d="M0 246.4c184.8 34.02 212.38 61.6 246.4 246.4C280.42 308 308 280.42 492.8 246.4 308 212.38 280.42 184.8 246.4 0 212.38 184.8 184.8 212.38 0 246.4Z"/>
+              </svg>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit
+            </p>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 492.8 492.8">
+                <path d="M0 246.4c184.8 34.02 212.38 61.6 246.4 246.4C280.42 308 308 280.42 492.8 246.4 308 212.38 280.42 184.8 246.4 0 212.38 184.8 184.8 212.38 0 246.4Z"/>
+              </svg>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit
+            </p>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 492.8 492.8">
+                <path d="M0 246.4c184.8 34.02 212.38 61.6 246.4 246.4C280.42 308 308 280.42 492.8 246.4 308 212.38 280.42 184.8 246.4 0 212.38 184.8 184.8 212.38 0 246.4Z"/>
+              </svg>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit
+            </p>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 492.8 492.8">
+                <path d="M0 246.4c184.8 34.02 212.38 61.6 246.4 246.4C280.42 308 308 280.42 492.8 246.4 308 212.38 280.42 184.8 246.4 0 212.38 184.8 184.8 212.38 0 246.4Z"/>
+              </svg>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit
+            </p>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 492.8 492.8">
+                <path d="M0 246.4c184.8 34.02 212.38 61.6 246.4 246.4C280.42 308 308 280.42 492.8 246.4 308 212.38 280.42 184.8 246.4 0 212.38 184.8 184.8 212.38 0 246.4Z"/>
+              </svg>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit
+            </p>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 492.8 492.8">
+                <path d="M0 246.4c184.8 34.02 212.38 61.6 246.4 246.4C280.42 308 308 280.42 492.8 246.4 308 212.38 280.42 184.8 246.4 0 212.38 184.8 184.8 212.38 0 246.4Z"/>
+              </svg>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit
+            </p>
+        </div>
+    </div>
 </body>
 </html>
