--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hooti</title>
     <style>
+        body{
+            width: 100%;
+            overflow-x: hidden;
+        }
         div.super-parent{
             width: 100%;
             background :#ff0000;
@@ -17,7 +21,7 @@
             white-space: nowrap;
             position: relative;
             left: 0 ;
-            animation: hooti 5s alternate infinite;
+            animation: hooti 5s  infinite;
         }
         div svg{
             width: 60px;
